update nav bar fixed

--- a/about.html
+++ b/about.html
@@ -24,25 +24,26 @@
 <body>
     <div id="wrap">
         <!-- 新導覽列 -->
-        <nav class="header">
-            <div class="logo">
-                <a href="index.html"><img src="./Logo/main logo.svg" alt=""></a>
-            </div>
-            <div class="menu" id="myTopnav">
-                <a href="about.html" class="active">關於梅屋<br>ABOUT US</a>
-                <a href="product.html">商品一覽<br>PRODUCTS</a>
-                <a href="bar.html">品梅吧<br>UME BAR</a>
-                <a href="store.html">梅屋商店<br>OUR STORE</a>
-                <a href="contact.html">聯絡我們<br>CONTACT US</a>
-            </div>
-            <div class="header_icon">
-                <a id="myBtn" href="#"><i class="fas fa-user"></i></a>
-                <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
-            </div>
-
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                <i class="fa fa-bars"></i>
-            </a>
+        <div class="fixed">
+            <nav class="header">
+                <div class="logo">
+                  <a href="index.html"><img src="./Logo/main logo.svg" alt="" /></a>
+                </div>
+                <div class="menu" id="myTopnav">
+                  <a href="about.html" class="active">關於梅屋<br />ABOUT US</a>
+                  <a href="product.html">商品一覽<br />PRODUCTS</a>
+                  <a href="bar.html">品梅吧<br />UME BAR</a>
+                  <a href="store.html">梅屋商店<br />OUR STORE</a>
+                  <a href="contact.html">聯絡我們<br />CONTACT US</a>
+                </div>
+                <div class="header_icon">
+                  <a id="myBtn" href="#"><i class="fas fa-user"></i></a>
+                  <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
+                </div>
+        
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                  <i class="fa fa-bars"></i>
+                </a>
 
             <!-- The Modal -->
             <div id="myModal" class="modal">
@@ -69,7 +70,8 @@
                 </div>
             </div>
         </nav>
-
+    </div>
+    
         <!-- Top Banner -->
         <div class="top_banner">
             <h2>關於梅屋</h2>
