--- a/list.html
+++ b/list.html
@@ -23,6 +23,7 @@
 <body>
     <div id="wrap">
         <!-- 新導覽列 -->
+        <div class="fixed">
         <nav class="header">
             <div class="logo">
                 <a href="index.html"><img src="./Logo/main logo.svg" alt=""></a>
@@ -68,6 +69,7 @@
                 </div>
             </div>
         </nav>
+        </div>
     </div>
 
     <!-- 清單內容 -->
