--- a/login.html
+++ b/login.html
@@ -1,74 +1,84 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>梅屋 UMEYA</title>
-    <link rel="stylesheet" href="./css/newNavandFooter.css">
-    <link rel="stylesheet" href="./css/login.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="./css/newNavandFooter.css" />
+    <link rel="stylesheet" href="./css/login.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;700&family=Noto+Serif:wght@400;700&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css"
-        integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous">
-</head>
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;700&family=Noto+Serif:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v6.0.0/css/all.css"
+      integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<body>
+  <body>
     <div id="wrap">
-        <!-- 導覽列 -->
+      <!-- 導覽列 -->
+      <div class="fixed">
         <nav class="header">
-            <div class="logo">
-                <a href="index.html"><img src="./Logo/main logo.svg" alt=""></a>
-            </div>
-            <ul class="menu">
-                <li class="menu_list">
-                    <a href="about.html">關於梅屋<br>ABOUT US</a>
-                </li>
-                <li>
-                    <a href="product.html">商品一覽<br>PRODUCTS</a>
-                </li>
-                <li>
-                    <a href="bar.html">品梅吧<br>UME BAR</a>
-                </li>
-                <li>
-                    <a href="store.html">梅屋商店<br>OUR STORE</a>
-                </li>
-                <li>
-                    <a href="contact.html">聯絡我們<br>CONTACT US</a>
-                </li>
-            </ul>
+          <div class="logo">
+            <a href="index.html"><img src="./Logo/main logo.svg" alt="" /></a>
+          </div>
+          <ul class="menu">
+            <li class="menu_list">
+              <a href="about.html">關於梅屋<br />ABOUT US</a>
+            </li>
+            <li>
+              <a href="product.html">商品一覽<br />PRODUCTS</a>
+            </li>
+            <li>
+              <a href="bar.html">品梅吧<br />UME BAR</a>
+            </li>
+            <li>
+              <a href="store.html">梅屋商店<br />OUR STORE</a>
+            </li>
+            <li>
+              <a href="contact.html">聯絡我們<br />CONTACT US</a>
+            </li>
+          </ul>
 
-            <div class="header_icon">
-                <a href="login.html"><i class="fas fa-user"></i></a>
-                <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
-                <a href="#" class="showmenu"><i class="fa fa-bars"></i></a>
-            </div>
+          <div class="header_icon">
+            <a href="login.html"><i class="fas fa-user"></i></a>
+            <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
+            <a href="#" class="showmenu"><i class="fa fa-bars"></i></a>
+          </div>
         </nav>
+      </div>
     </div>
 
     <!-- 會員登入表單 -->
     <section class="login">
-        <div class="loginHead">
-            <h3>會員登入 / 註冊</h3>
-        </div>
-        <div class="loginMain">
-            <input type="email" placeholder="請輸入註冊Email" size="50">
-            <input type="password" placeholder="請輸入密碼" size="30">
-            <button type="submit">登入</button>
-            <a href="signin.html"><button type="submit">註冊</button></a>
-        </div>
-        <hr class="divider">
-        <div class="forgetPasswd">
-            <h3>忘記密碼</h3>
-            <input type="email" placeholder="請輸入註冊Email" size="50">
-            <button type="submit">送出</button>
-        </div>
+      <div class="loginHead">
+        <h3>會員登入 / 註冊</h3>
+      </div>
+      <div class="loginMain">
+        <input type="email" placeholder="請輸入註冊Email" size="50" />
+        <input type="password" placeholder="請輸入密碼" size="30" />
+        <button type="submit">登入</button>
+        <a href="signin.html"><button type="submit">註冊</button></a>
+      </div>
+      <hr class="divider" />
+      <div class="forgetPasswd">
+        <h3>忘記密碼</h3>
+        <input type="email" placeholder="請輸入註冊Email" size="50" />
+        <button type="submit">送出</button>
+      </div>
     </section>
 
     <!-- 酒後不開車聲明 -->
@@ -76,17 +86,23 @@
 
     <!-- footer -->
     <footer id="footer">
-        <ul class="footer_inner">
-            <p>本網站為緯育TibaMe前端設計工程師TFD105班學員專題作品，僅供學習、展示之用。</p>
-            <div class="footer_icon">
-                <li><a href="https://zh-tw.facebook.com" target="window name"><i class="fab fa-facebook-f"></i></a>
-                </li>
-                <li><a href="https://www.instagram.com/" target="window name2">
-                        <i class="fab fa-instagram"></i></a></li>
-            </div>
-        </ul>
+      <ul class="footer_inner">
+        <p>
+          本網站為緯育TibaMe前端設計工程師TFD105班學員專題作品，僅供學習、展示之用。
+        </p>
+        <div class="footer_icon">
+          <li>
+            <a href="https://zh-tw.facebook.com" target="window name"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/" target="window name2">
+              <i class="fab fa-instagram"></i
+            ></a>
+          </li>
+        </div>
+      </ul>
     </footer>
-
-</body>
-
+  </body>
 </html>
