--- a/signin.html
+++ b/signin.html
@@ -22,6 +22,7 @@
 <body>
     <div id="wrap">
         <!-- 新導覽列 -->
+        <div class="fixed">
         <nav class="header">
             <div class="logo">
                 <a href="index.html"><img src="./Logo/main logo.svg" alt=""></a>
@@ -42,6 +43,7 @@
                 <i class="fa fa-bars"></i>
             </a>
         </nav>
+        </div>
     </div>
 
     <!-- 會員註冊表單 -->
