--- a/store.html
+++ b/store.html
@@ -1,205 +1,234 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>梅屋 UMEYA</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/newNavandFooter.css">
-    <link rel="stylesheet" href="./css/store_style.css">
-    <link rel="stylesheet" href="./css/login.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;700&family=Noto+Serif:wght@400;700&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css"
-        integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous">
-</head>
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/newNavandFooter.css" />
+    <link rel="stylesheet" href="./css/store_style.css" />
+    <link rel="stylesheet" href="./css/login.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;700&family=Noto+Serif:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v6.0.0/css/all.css"
+      integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<body>
+  <body>
     <div id="wrap">
-        <!-- 新導覽列 -->
+      <!-- 新導覽列 -->
+      <div class="fixed">
         <nav class="header">
-            <div class="logo">
-                <a href="index.html"><img src="./Logo/main logo.svg" alt=""></a>
-            </div>
-            <div class="menu" id="myTopnav">
-                <a href="about.html" class="active">關於梅屋<br>ABOUT US</a>
-                <a href="product.html">商品一覽<br>PRODUCTS</a>
-                <a href="bar.html">品梅吧<br>UME BAR</a>
-                <a href="store.html">梅屋商店<br>OUR STORE</a>
-                <a href="contact.html">聯絡我們<br>CONTACT US</a>
-            </div>
-            <div class="header_icon">
-                <a id="myBtn" href="#"><i class="fas fa-user"></i></a>
-                <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
-            </div>
+          <div class="logo">
+            <a href="index.html"><img src="./Logo/main logo.svg" alt="" /></a>
+          </div>
+          <div class="menu" id="myTopnav">
+            <a href="about.html" class="active">關於梅屋<br />ABOUT US</a>
+            <a href="product.html">商品一覽<br />PRODUCTS</a>
+            <a href="bar.html">品梅吧<br />UME BAR</a>
+            <a href="store.html">梅屋商店<br />OUR STORE</a>
+            <a href="contact.html">聯絡我們<br />CONTACT US</a>
+          </div>
+          <div class="header_icon">
+            <a id="myBtn" href="#"><i class="fas fa-user"></i></a>
+            <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
+          </div>
 
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                <i class="fa fa-bars"></i>
-            </a>
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+          </a>
 
-            <!-- The Modal -->
-            <div id="myModal" class="modal">
-                <div class="modal-content">
-                    <span class="close">&times;</span>
-                    <div class="loginHead">
-                        <h3>會員登入 / 註冊</h3>
-                    </div>
-                    <div class="loginMain">
-                        <input type="email" placeholder="請輸入註冊Email" size="50">
-                        <br>
-                        <input type="password" placeholder="請輸入密碼" size="30">
-                        <br>
-                        <button type="submit">登入</button>
-                        <a href="signin.html"><button type="submit">註冊</button></a>
-                    </div>
-                    <hr class="divider">
-                    <div class="forgetPasswd">
-                        <h3>忘記密碼</h3>
-                        <input type="email" placeholder="請輸入註冊Email" size="50">
-                        <br>
-                        <button type="submit">送出</button>
-                    </div>
-                </div>
+          <!-- The Modal -->
+          <div id="myModal" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <div class="loginHead">
+                <h3>會員登入 / 註冊</h3>
+              </div>
+              <div class="loginMain">
+                <input type="email" placeholder="請輸入註冊Email" size="50" />
+                <br />
+                <input type="password" placeholder="請輸入密碼" size="30" />
+                <br />
+                <button type="submit">登入</button>
+                <a href="signin.html"><button type="submit">註冊</button></a>
+              </div>
+              <hr class="divider" />
+              <div class="forgetPasswd">
+                <h3>忘記密碼</h3>
+                <input type="email" placeholder="請輸入註冊Email" size="50" />
+                <br />
+                <button type="submit">送出</button>
+              </div>
             </div>
+          </div>
         </nav>
+      </div>
 
-        <!-- Top Banner -->
-        <div class="top_banner">
-            <h2>梅屋商店</h2>
+      <!-- Top Banner -->
+      <div class="top_banner">
+        <h2>梅屋商店</h2>
+      </div>
+
+      <!-- intro -->
+      <div class="intro">
+        <h3>
+          在梅屋商店你可以找到我們引以為傲的精釀梅酒<br />
+          與日本各地梅酒與果實酒
+        </h3>
+      </div>
+
+      <!-- storeitem -->
+      <section class="container">
+        <div class="row">
+          <div class="pic col-md-6 col-lg-6 col-xl-4">
+            <img src="./Store/1-100.jpg" alt="" />
+            <span class="title1">手工醉梅<br />Ume</span>
+          </div>
+          <div class="pic col-md-6 col-lg-6 col-xl-4">
+            <img src="./Store/9-100.jpg" alt="" />
+            <span class="title2">威士忌梅酒<br />Ume Whisky</span>
+          </div>
+          <div class="pic col-md-6 col-lg-6 col-xl-4">
+            <img src="./Store/16-100.jpg" alt="" />
+            <span class="title3"></span>
+          </div>
+          <div class="pic col-md-6 col-lg-6 col-xl-4">
+            <img src="./Store/2-100.jpg" alt="" />
+            <span class="title3">泡盛梅酒<br />Ume Awamori</span>
+          </div>
+          <div class="pic col-md-6 col-lg-6 col-xl-4">
+            <img src="./Store/7-100.jpg" alt="" />
+            <span class="title4">清酒梅酒<br />Ume Sake</span>
+          </div>
+          <div class="pic col-md-6 col-lg-6 col-xl-4">
+            <img src="./Store/33-100.jpg" alt="" />
+            <span class="title5">找更多梅酒<br />歡迎光臨梅屋商店</span>
+          </div>
         </div>
+      </section>
 
-        <!-- intro -->
-        <div class="intro">
-            <h3>
-                在梅屋商店你可以找到我們引以為傲的精釀梅酒<br>
-                與日本各地梅酒與果實酒
-            </h3>
-        </div>
+      <!-- 地址位置圖 -->
+      <div class="storeadd">
+        <h3>梅屋商店</h3>
+        <p>
+          地址：104台北市中山區南京東路三段219號1樓<br /><br />
+          營業時間：12:00-20:00<br /><br />
+          梅酒詢問專線：02-2712-0589<br /><br />
+        </p>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.4676870476596!2d121.54105885017637!3d25.05213284364043!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abddfb12794f%3A0x53046766ad65b2e4!2zMTA0OTHlj7DljJfluILkuK3lsbHljYDljZfkuqzmnbHot6_kuInmrrUyMTnomZ8x!5e0!3m2!1szh-TW!2stw!4v1643622075016!5m2!1szh-TW!2stw"
+          width="1000"
+          height="400"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+        ></iframe>
+      </div>
 
-        <!-- storeitem -->
-        <section class="container">
-            <div class="row">
-                <div class="pic col-md-6 col-lg-6 col-xl-4">
-                    <img src="./Store/1-100.jpg" alt="">
-                    <span class="title1">手工醉梅<br>Ume</span>
-                </div>
-                <div class="pic col-md-6 col-lg-6 col-xl-4">
-                    <img src="./Store/9-100.jpg" alt="">
-                    <span class="title2">威士忌梅酒<br>Ume Whisky</span>
-                </div>
-                <div class="pic col-md-6 col-lg-6 col-xl-4">
-                    <img src="./Store/16-100.jpg" alt="">
-                    <span class="title3"></span>
-                </div>
-                <div class="pic col-md-6 col-lg-6 col-xl-4">
-                    <img src="./Store/2-100.jpg" alt="">
-                    <span class="title3">泡盛梅酒<br>Ume Awamori</span>
-                </div>
-                <div class="pic col-md-6 col-lg-6 col-xl-4">
-                    <img src="./Store/7-100.jpg" alt="">
-                    <span class="title4">清酒梅酒<br>Ume Sake</span>
-                </div>
-                <div class="pic col-md-6 col-lg-6 col-xl-4">
-                    <img src="./Store/33-100.jpg" alt="">
-                    <span class="title5">找更多梅酒<br>歡迎光臨梅屋商店</span>
-                </div>
-            </div>
-        </section>
+      <!-- 酒後不開車聲明 -->
+      <div class="warning"></div>
 
-        <!-- 地址位置圖 -->
-        <div class="storeadd">
-            <h3>梅屋商店</h3>
-            <p>地址：104台北市中山區南京東路三段219號1樓<br><br>
-                營業時間：12:00-20:00<br><br>
-                梅酒詢問專線：02-2712-0589<br><br>
-            </p>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.4676870476596!2d121.54105885017637!3d25.05213284364043!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abddfb12794f%3A0x53046766ad65b2e4!2zMTA0OTHlj7DljJfluILkuK3lsbHljYDljZfkuqzmnbHot6_kuInmrrUyMTnomZ8x!5e0!3m2!1szh-TW!2stw!4v1643622075016!5m2!1szh-TW!2stw"
-                width="1000" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
+      <!-- footer -->
+      <footer id="footer">
+        <ul class="footer_inner">
+          <p>
+            本網站為緯育TibaMe前端設計工程師TFD105班學員專題作品，僅供學習、展示之用。
+          </p>
+          <div class="footer_icon">
+            <li>
+              <a href="https://zh-tw.facebook.com" target="window name"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/" target="window name2">
+                <i class="fab fa-instagram"></i
+              ></a>
+            </li>
+          </div>
+        </ul>
+      </footer>
 
-        <!-- 酒後不開車聲明 -->
-        <div class="warning"></div>
-
-        <!-- footer -->
-        <footer id="footer">
-            <ul class="footer_inner">
-                <p>本網站為緯育TibaMe前端設計工程師TFD105班學員專題作品，僅供學習、展示之用。</p>
-                <div class="footer_icon">
-                    <li><a href="https://zh-tw.facebook.com" target="window name"><i class="fab fa-facebook-f"></i></a>
-                    </li>
-                    <li><a href="https://www.instagram.com/" target="window name2">
-                            <i class="fab fa-instagram"></i></a></li>
-                </div>
-            </ul>
-        </footer>
-
-        <!-- go to top btn -->
-        <div>
-            <button id="topBtn" onclick="topFunction()" title="Go to top">
-                <i class="fas fa-chevron-circle-up"></i>
-            </button>
-        </div>
+      <!-- go to top btn -->
+      <div>
+        <button id="topBtn" onclick="topFunction()" title="Go to top">
+          <i class="fas fa-chevron-circle-up"></i>
+        </button>
+      </div>
     </div>
 
     <script>
-        // hamburger btn
-        function myFunction() {
-            var x = document.getElementById("myTopnav");
-            if (x.className === "menu") {
-                x.className += "responsive";
-            } else {
-                x.className = "menu";
-            }
+      // hamburger btn
+      function myFunction() {
+        var x = document.getElementById("myTopnav");
+        if (x.className === "menu") {
+          x.className += "responsive";
+        } else {
+          x.className = "menu";
         }
+      }
     </script>
 
     <script>
-        mybutton = document.getElementById("topBtn"); //Get the button
-        window.onscroll = function () {
-            scrollFunction()
-        };
+      mybutton = document.getElementById("topBtn"); //Get the button
+      window.onscroll = function () {
+        scrollFunction();
+      };
 
-        function scrollFunction() {
-            if (document.body.scrollTop > 500 || document.documentElement.scrollTop > 500) {
-                mybutton.style.display = "block";
-            } else {
-                mybutton.style.display = "none";
-            }
+      function scrollFunction() {
+        if (
+          document.body.scrollTop > 500 ||
+          document.documentElement.scrollTop > 500
+        ) {
+          mybutton.style.display = "block";
+        } else {
+          mybutton.style.display = "none";
         }
+      }
 
-        function topFunction() {
-            document.body.scrollTop = 0; // for safari
-            document.documentElement.scrollTop = 0; // for chrome
-        }
+      function topFunction() {
+        document.body.scrollTop = 0; // for safari
+        document.documentElement.scrollTop = 0; // for chrome
+      }
     </script>
 
     <script>
-        // modal box
-        var modal = document.getElementById("myModal");
-        var btn = document.getElementById("myBtn");
-        var span = document.getElementsByClassName("close")[0];
-        btn.onclick = function () {
-            modal.style.display = "block";
-        }
+      // modal box
+      var modal = document.getElementById("myModal");
+      var btn = document.getElementById("myBtn");
+      var span = document.getElementsByClassName("close")[0];
+      btn.onclick = function () {
+        modal.style.display = "block";
+      };
 
-        span.onclick = function () {
-            modal.style.display = "none";
-        }
+      span.onclick = function () {
+        modal.style.display = "none";
+      };
 
-        window.onclick = function (event) {
-            if (event.target == modal) {
-                modal.style.display = "none";
-            }
+      window.onclick = function (event) {
+        if (event.target == modal) {
+          modal.style.display = "none";
         }
+      };
     </script>
-</body>
-
+  </body>
 </html>
